# qlass

./: .coveragerc  .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  classical_solution.py  hamiltonian_coef.npy  hamiltonian_elem.npy  hamiltonians.py  helper_functions.py  mypy.ini  photonic_vqe.ipynb  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  coverage.yml  docs-build.yml  draft-pdf.yml  examples.yml  tests.yml
docs/: api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  modules.rst  qlass.compiler.rst  qlass.mitigation.rst  qlass.quantum_chemistry.rst  qlass.rst  qlass.utils.rst  qlass.vqe.rst  refs.bib  requirements.txt  user_guide.rst
examples/: H4_DFT_Ham.py  LiH.py  M3_readout_noise_comparison.py  bose_hubbard_dimer_example.py  draw_circuit_example.py  ensemble_vqe_H2.py  ensemble_vqe_H4.py  h2_hamiltonian_data.py  kerr_ansatz_example.py  noisy_example.py  resource_aware_example.py  sim-3d-device.py  vqe_example.py  vqe_example_HF_ansatz.py  vqe_example_KS_hamiltonian.py  vqe_example_piquasso.py  vqe_example_pu_ps.py  vqe_example_with_parameter_shiftrule.py  vqe_photonic_unitary_example.py  vqe_simulation_qiskit.py  vqe_unitary_executor_example.py
notebooks/: demo.ipynb
paper/: paper.bib  paper.md
qlass/: __init__.py  ansatz.py  classical_solution.py  compiler.py  executor.py  hamiltonians.py  helper_functions.py  openfermion_interface.py
qlass/compiler/: __init__.py  compiler.py  hardware_config.py
qlass/noise/: noise.py
qlass/quantum_chemistry/: __init__.py  classical_solution.py  hamiltonians.py  quantum_chemistry.py
qlass/tests/: test_quantum_chemistry.py  test_utils.py  test_vqe.py  tests.py
qlass/utils/: __init__.py  utils.py
qlass/vqe/: __init__.py  ansatz.py  vqe.py
src/qlass/: __init__.py
src/qlass/compiler/: __init__.py  compiler.py  hardware_config.py
src/qlass/mitigation/: __init__.py  m3.py  zne.py
src/qlass/quantum_chemistry/: __init__.py  classical_solution.py  hamiltonians.py
src/qlass/utils/: __init__.py  draw_circuit.py  utils.py
src/qlass/vqe/: __init__.py  ansatz.py  vqe.py
tests/: test_compiler.py  test_draw_circuit.py  test_m3_mitigation.py  test_public_api.py  test_quantum_chemistry.py  test_utils.py  test_vqe.py  test_zne_mitigation.py  tests.py
