# In pyproject.toml

[project]
name = "qlass"
version = "0.1.4"
description = "VQE on linear optical circuits"
authors = [{name = "Farrokh Labib", email = "farrokh@unitary.foundation"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]


dependencies = [
"qiskit==2.1.2",
"qiskit_aer",
"numpy",
"perceval-quandela==0.13.2",
"openfermion",
"openfermionpyscf",
"pyscf",
"tqdm",
"numba>=0.59.0"
]

readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.15.1",
]
dev = [
    {include-group = "test"},
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/unitaryfoundation/qlass"
Issues = "https://github.com/unitaryfoundation/qlass/issues"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
xfail_strict = true
log_cli_level = "INFO"
testpaths = ["tests"]


[tool.coverage]
run.source = ["qlass"]
run.omit = [
    '*/tests/*',
    '*.ipynb',
    '*/.ipynb_checkpoints/*',
]
report.show_missing = true
# This ensures that even with 100% coverage, files with no statements are not ignored
report.fail_under = 0
report.exclude_also = [
    '\.\.\.',
    'if TYPE_CHECKING:',
    'raise AssertionError',
    'raise NotImplementedError',
    'def __dir__()',  # Ignore __dir__ method that exists mainly for better IDE support
    '@overload'  # Overloads are only for static typing
]
