# In pyproject.toml

[project]
name = "qlass"
version = "0.2.0"
description = "VQE on linear optical circuits"
authors = [{name = "Farrokh Labib", email = "farrokh@unitary.foundation"}]
requires-python = ">=3.9,<3.14"

dependencies = [
"qiskit==2.1.2",
"qiskit_aer",
"numpy",
"perceval-quandela==0.13.2",
"openfermion",
"openfermionpyscf",
"pyscf",
"tqdm",
"numba>=0.59.0"
]

readme = "README.md"
license = "Apache License"
license-files = ["LICENSE"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "coverage"
]

[tool.poetry.dev-dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/unitaryfoundation/qlass"
Issues = "https://github.com/unitaryfoundation/qlass/issues"
