# In pyproject.toml

[project]
name = "qlass"
version = "0.2.1"
description = "VQE on linear optical circuits"
authors = [{name = "Farrokh Labib", email = "farrokh@unitary.foundation"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]


dependencies = [
    "qiskit>=2.0.0",
    "numpy>=2.1; python_version >= '3.13'",
    "numpy>=1.26; python_version >= '3.12'",
    "numpy>=1.24; python_version >= '3.11'",
    "numpy>=1.22",
    "qiskit_aer>=0.17.0",
    "perceval-quandela>=0.13.2,<1.0.0",
    "piquasso>=7.1.0",
    "openfermionpyscf>=0.5",
    "tqdm>=4.67.1",
    "numba>=0.59.0; python_version < '3.13'",
    "numba>=0.61.0; python_version >= '3.13'",
]

readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.15.1",
]
type-check = [
    "mypy>=1.13.0",
]
lint = [
    "ruff>=0.8.0",
]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme>=3",
    "sphinxcontrib-bibtex",
]
dev = [
    {include-group = "test"},
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/unitaryfoundation/qlass"
Issues = "https://github.com/unitaryfoundation/qlass/issues"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
xfail_strict = true
log_cli_level = "INFO"
testpaths = ["tests"]


[tool.coverage]
run.source = ["qlass"]
run.omit = [
    '*/tests/*',
    '*.ipynb',
    '*/.ipynb_checkpoints/*',
]
report.show_missing = true
# This ensures that even with 100% coverage, files with no statements are not ignored
report.fail_under = 0
report.exclude_also = [
    '\.\.\.',
    'if TYPE_CHECKING:',
    'raise AssertionError',
    'raise NotImplementedError',
    'def __dir__()',  # Ignore __dir__ method that exists mainly for better IDE support
    '@overload'  # Overloads are only for static typing
]
